--- a/.github/workflows/04Proj.yml
+++ b/.github/workflows/04Proj.yml
@@ -5,5 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -name: Get Code
-      
+      uses: actions/checkout@latest
+      -name: Install Node JS
+      uses: actions/setup-node@vs
+        with:
+          node-version: 18
+      -name: Install Dependencies
+      run: npm ci
+      -name: Run Test
+      run: npm test
     -
