--- a/.github/workflows/04Proj.yml
+++ b/.github/workflows/04Proj.yml
@@ -1,8 +1,8 @@
-name: deploymentproj
+name: DeploymentProj
 on: push
 jobs:
   GetCode:
     runs-on: ubuntu-latest
     steps:
-      -name: Get Code
-       uses: actions/checkout@v3
+      - name: GetCode
+        uses: actions/checkout@v3
