--- a/.github/workflows/04Proj.yml
+++ b/.github/workflows/04Proj.yml
@@ -6,3 +6,11 @@ jobs:
     steps:
       - name: GetCode
         uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Test
+        run: npm test
