add lint run before test and build

--- a/.github/workflows/04Proj.yml
+++ b/.github/workflows/04Proj.yml
@@ -12,6 +12,8 @@ jobs:
           node-version: 18
       - name: Install Dependencies
         run: npm ci
+      - name: Run Lint check
+        run: npm run lint
       - name: Run Test
         run: npm test
       - name: Build
